k8s/applications/services/flight-tracking/ultrafeeder/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ultrafeeder
  namespace: flight-tracking
spec:
  selector:
    matchLabels:
      app: ultrafeeder
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ultrafeeder
    spec:
      containers:
        - name: ultrafeeder
          image: ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder:latest
          ports:
          - containerPort: 80
            protocol: TCP
            name: http
          - containerPort: 9273
            protocol: TCP
            name: metrics-1
          - containerPort: 9274
            protocol: TCP
            name: metrics-2
          - containerPort: 30005
            protocol: TCP
            name: beast
          - containerPort: 30105
            protocol: TCP
            name: beast-reduce
          resources:
            requests:
              memory: "50Mi"
              cpu: "250m"
              device.duck.moe/radio-ads: "1"
            limits:
              # memory: "100Mi"
              # cpu: "500m"
              device.duck.moe/radio-ads: "1"
          securityContext:
            privileged: true
            procMount: Default
          volumeMounts:
          - name: usb-ads-b
            mountPath: /dev/bus/usb
          - name: globe-history
            mountPath: /var/globe_history
          - name: var-log
            mountPath: /var/log
          - name: tmp
            mountPath: /tmp
          - name: run
            mountPath: /run
          # livenessProbe:
          #   exec:
          #     command:
          #       - /scripts/healthcheck.sh
          #   periodSeconds: 60
          #   failureThreshold: 3
          #   timeoutSeconds: 30
          # startupProbe:
          #   exec:
          #     command:
          #       - /scripts/healthcheck.sh
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
          #   failureThreshold: 30
          #   timeoutSeconds: 30
      volumes:
      - name: usb-ads-b
        hostPath:
          path: /dev/bus/usb
          type: Directory
      - name: globe-history
        emptyDir: {}
      - name: run
        emptyDir:
          medium: "Memory"
          sizeLimit: 256M
      - name: tmp
        emptyDir:
          sizeLimit: 128M
      - name: var-log
        emptyDir:
          sizeLimit: 32M
