k8s/applications/services/flight-tracking/ultrafeeder/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ultrafeeder
  labels:
    app: ultrafeeder
spec:
  ipFamilies:
    - IPv6
    - IPv4
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: metrics
    port: 9273
    targetPort: metrics
  - name: beast
    port: 30005
    targetPort: beast
  - name: beast-reduce
    port: 30105
    targetPort: beast-reduce
  selector:
    app: ultrafeeder
